deploy/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors-middleware
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
      - "OPTIONS"
      - "PUT"
      - "POST"
      - "DELETE"
    accessControlAllowOriginList:
      - "https://giftwiki.leetserve.com"
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
