deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikileet
  labels:
    app: wikileet
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: wikileet
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: metrics
  type: ClusterIP
