deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-aws-prod
    ingress.kubernetes.io/ssl-redirect: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-https-redirect@kubernetescrd,kube-system-traefik-forward-auth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: giftwiki.leetserve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app-service
                port:
                  number: 80
  tls:
    - hosts:
      - giftwiki.leetserve.com
      secretName: gift-wiki-tls
